--- a/index.html
+++ b/index.html
@@ -2,24 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>elm-webpack-loader !example</title>
+    <title>WRS</title>
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-          
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <!-- Compiled and minified JavaScript -->
       <script src="materialize.js"></script>
-
-      <script src="/bower_components/webcomponentsjs/webcomponents.js"></script>
-      <script>
-        window.Polymer = {
-          dom: 'shadow'
-        };
-      </script>
-      <link rel="import" href="/bower_components/bower_components/polymer/polymer.html">
-
-      <link rel="import" href="/bower_components/bower_components/paper-input/paper-input.html">
   </head>
   <body>
     <div id="main"></div>
