--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>WRS</title>
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="materialize.min.css">
+      <link rel="stylesheet" href="css/materialize.min.css">
 
       <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
       <script src="materialize.js"></script>
