Retrieve value from datepicker in elm

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>WRS</title>
+
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="css/materialize.min.css">
+      <link rel="stylesheet" href="css/materialize.css">
 
       <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
       <script src="materialize.js"></script>
 
       <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-      <link rel="import" href="bower_components/emoji-rain/emoji-rain.html">
-      <link rel="import" href="bower_components/paper-date-picker/paper-date-picker.html">
+      <link rel="import" href="bower_components/app-datepicker/app-datepicker.html">
+      <link rel="import" href="bower_components/polymer/polymer.html">
+
   </head>
   <body>
+
     <div id="main"></div>
     <script src="index.js"></script>
+
   </body>
 </html>
