--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <body>
 
     <div id="main"></div>
-    <script src="index.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
