--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="css/materialize.css">
+      <link rel="stylesheet" href="css/wrs.css">
 
       <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
       <script src="materialize.js"></script>
-
   </head>
   <body>
-
     <div id="main"></div>
 
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
