--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>WRS</title>
-
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="css/materialize.css">
-      <link rel="stylesheet" href="css/wrs.css">
-
-      <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
-      <script src="materialize.js"></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
+      <link rel="stylesheet" href="css/elm-datepicker.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="main"></div>
