--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>WTOS Uitslagen</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
       <link rel="stylesheet" href="css/wrs.css">
       <link rel="stylesheet" href="css/elm-datepicker.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
     <div id="main"></div>
-
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
     <script src="index.js"></script>
   </body>
