--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"
     />
-    <link rel="stylesheet" href="css/wrs.css" />
-    <link rel="stylesheet" href="css/elm-datepicker.css" />
+    <link rel="stylesheet" href="/static/wrs.css" />
+    <link rel="stylesheet" href="/static/elm-datepicker.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
       defer
