--- a/prod/index.html
+++ b/prod/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
   <head>
     <meta charset="utf-8" />
     <title>WTOS Uitslagen</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="/static/wrs.css" />
     <link rel="stylesheet" href="/static/elm-datepicker.css" />
